Fix dropdown menu margins caused by newline whitespace

--- a/app/assets/stylesheets/photo_manager.css.scss
+++ b/app/assets/stylesheets/photo_manager.css.scss
@@ -51,12 +51,16 @@ $manager-side-bar-width: 320px;
 #dashboard-actions {
   text-align: left;
   padding: 0 0 20px;
+  // Remove the extra whitespace caused by newline between dropdown-menu
+  // elements
+  font-size: 0;
 
   .dropdown-menu {
     // visibility: hidden;
     display: inline-block;
     padding: 7px;
     margin-bottom: 5px;
+    margin-right: 5px;
     border: 1px solid #aaa;
     @include border-radius(2px);
     font-size: 14px;
